@@ -24,7 +24,7 @@ class TestAttributePricing extends ZMTestCase {
      * Test attribute price.
      */
     public function testValuePrice() {
-        foreach (ZMProducts::instance()->getProducts(false) as $product) {
+        foreach (ZMProducts::instance()->getAllProducts(false) as $product) {
             foreach ($product->getAttributes() as $attribute) {
                 foreach ($attribute->getValues() as $value) {
                     $priceInfo = $this->zen_cart_attribute_price_info['p'.$value->getAttributeValueDetailsId()];
@@ -39,7 +39,7 @@ class TestAttributePricing extends ZMTestCase {
      * Test one time price.
      */
     public function testValueOneTimePrice() {
-        foreach (ZMProducts::instance()->getProducts(false) as $product) {
+        foreach (ZMProducts::instance()->getAllProducts(false) as $product) {
             foreach ($product->getAttributes() as $attribute) {
                 foreach ($attribute->getValues() as $value) {
                     $zprice = zen_get_attributes_price_final_onetime($value->getAttributeValueDetailsId(), 1, '');
