@@ -15,7 +15,7 @@ class TestProductPricing extends ZMTestCase {
      * Test product base price.
      */
     public function testBasePrice() {
-        foreach (ZMProducts::instance()->getProducts(false) as $product) {
+        foreach (ZMProducts::instance()->getAllProducts(false) as $product) {
             $offers = $product->getOffers();
             // without tax
             $this->assertEqual(zen_get_products_base_price($product->getId()), $offers->getBasePrice(false), '%s productId='.$product->getId());
@@ -26,7 +26,7 @@ class TestProductPricing extends ZMTestCase {
      * Test special price.
      */
     public function testSpecialPrice() {
-        foreach (ZMProducts::instance()->getProducts(false) as $product) {
+        foreach (ZMProducts::instance()->getAllProducts(false) as $product) {
             $offers = $product->getOffers();
             // without tax
             $this->assertEqual(zen_get_products_special_price($product->getId(), true), $offers->getSpecialPrice(false), '%s productId='.$product->getId());
@@ -37,7 +37,7 @@ class TestProductPricing extends ZMTestCase {
      * Test sale price.
      */
     public function testSalePrice() {
-        foreach (ZMProducts::instance()->getProducts(false) as $product) {
+        foreach (ZMProducts::instance()->getAllProducts(false) as $product) {
             $offers = $product->getOffers();
             // without tax
             $this->assertEqual(zen_get_products_special_price($product->getId(), false), $offers->getSalePrice(false), '%s productId='.$product->getId());
