@@ -13,7 +13,7 @@ class TestZMSalemaker extends ZMTestCase {
      * Test getSaleDiscountTypeInfo.
      */
     public function testGetSaleDiscountTypeInfo() {
-        foreach (ZMProducts::instance()->getProducts(false) as $product) {
+        foreach (ZMProducts::instance()->getAllProducts(false) as $product) {
             $productId = $product->getId();
             $info = ZMSalemaker::instance()->getSaleDiscountTypeInfo($productId);
             $type = zen_get_products_sale_discount_type($productId);
